# ProjectC

./: 1_4.cpp  1_5.cpp  2_1.cpp  2_2.cpp  2_3.cpp  2_4.cpp  2__2.cpp  3_1.cpp  3_5.cpp  4_2.cpp  4_3.cpp  4_4.cpp  4_5.cpp  4_6.cpp  BigLetter.cpp  CMakeLists.txt  DelNaRazryadi.cpp  meters-kilometers.cpp  palindrom.cpp  test.cpp  testFunctions.cpp
3_3/: 3_3.cpp  3_3txt.txt
3_4/: 3_4.cpp  3_4txt
4_1/: 4_1.cpp
